--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit>=1.28.0
-plotly>=5.18.0
-pandas>=2.0.0
-numpy>=1.24.0
-requests>=2.31.0
-statsmodels>=0.14.0
-scipy>=1.11.0
+streamlit>=1.41.0
+numpy
+pandas
+requests
+plotly
+statsmodels
+scipy
+fpdf2
